Make field separator more visible, fix spacing between delete button of choices and next choice, fix choice count statement

--- a/app/javascript/stylesheets/hitobito/_form.scss
+++ b/app/javascript/stylesheets/hitobito/_form.scss
@@ -372,7 +372,7 @@ textarea {
 
 .fields-separation hr {
   margin: 7px 0 15px;
-  border-top-color: $gray-light;
+  border-top-color: $gray;
 }
 
 .control-group.required > label {
